--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-form-flex">
   <mat-card class="example-card">
     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    <mat-card-title>Shiba Inu</mat-card-title>
+    <mat-card-title routerLink="page-not-found">Shiba Inu</mat-card-title>
     <mat-card-content>
       <form *ngIf="!isLoggedIn" >
         <p>
